added employee auth condition

--- a/client/views/partials/admin/adminLogin.html
+++ b/client/views/partials/admin/adminLogin.html
@@ -10,7 +10,7 @@
                        placeholder="User Name"/>
             </li>
             <li class="form-group">
-                <input type="text" class="form-control login-form-control" ng-model="loginParams.password" name="password"
+                <input type="password" class="form-control login-form-control" ng-model="loginParams.password" name="password"
                        placeholder="Password"/>
             </li>
             <li class="form-group">
