--- a/client/views/partials/admin/customers/createCustomer.html
+++ b/client/views/partials/admin/customers/createCustomer.html
@@ -137,13 +137,13 @@
                             <p>Uploading Customer Documents</p>
                         </div>
                         <div class="form-group">
-                            <select class="form-control custom-form-control" ng-model="customerLead.proofs">
+                            <select class="form-control custom-form-control" ng-model="customerLead.documentType">
                                 <option value="" selected>Select ID Proof</option>
                                 <option ng-repeat="proofs in customerProofs" value="{{proofs}}">{{proofs}}</option>
                         </select>
                         </div>
                         <div class="form-group">
-                            <input type="file" class="form-control custom-form-control" ng-model="files" />
+                            <input type="file" ngf-select class="form-control custom-form-control" ng-model="customerLead.file" />
                             <!-- <div class="col-sm-4">
                                 <input type="button" ng-click="uploadProof()" value="Upload" class="btn btn-success" />
                             </div> -->
