--- a/client/css/adminStyles.css
+++ b/client/css/adminStyles.css
@@ -27,6 +27,10 @@
     margin-top: 30px;
 }
 
+.mb-10 {
+    margin-bottom: 10px;
+}
+
 .pt-5 {
     padding-top: 5px;
 }
@@ -395,4 +399,30 @@ footer {
 
 .clr-red {
     color: #f00;
+}
+
+.bg-diff {
+    background: #f8f8f8;
+    padding: 20px 10px;
+    margin-bottom: 10px;
+}
+
+.select2 > .select2-choice.ui-select-match {
+    /* Because of the inclusion of Bootstrap */
+    height: 29px;
+}
+
+.selectize-control > .selectize-dropdown {
+    top: 36px;
+}
+/* Some additional styling to demonstrate that append-to-body helps achieve the proper z-index layering. */
+.select-box {
+    background: #fff;
+    position: relative;
+    z-index: 1;
+}
+.alert-info.positioned {
+    margin-top: 1em;
+    position: relative;
+    z-index: 10000; /* The select2 dropdown has a z-index of 9999 */
 }
