--- a/client/views/adminIndex.html
+++ b/client/views/adminIndex.html
@@ -92,6 +92,7 @@
 <script src="components/angular-ui-select/dist/select.min.js"></script>
 <script src="components/underscore/underscore-min.js"></script>
 <script type="text/javascript" src="components/angularjs-dropdown-multiselect/dist/angularjs-dropdown-multiselect.min.js"></script>
+<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.0/angular-sanitize.js"></script>
 
 <!--Routing adminApp.js File-->
 <script src="js/adminApp.js"></script>
